[package]
name = "cess_podr2_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.8.1"
rand = "0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1"
threadpool = "1.8.1"
num-bigint = "0.4.3"
rust-crypto = "0.2.36"
hex = "0.4.3"
num-traits = "0.2.15"
num-integer = "0.1.45"
num-bigint-dig = "0.8.2"
sha2 = { version = "0.10.6", default-features = false , features = ["oid"]}